Changed layout of results: tweaks for smaller viewports, and scroll-fix for description spillover

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,8 +4,9 @@ html, body {
   margin: 0px;
   padding: 0px; }
 
-body #animate-view-container .animate-view #playlist, body #animate-view-container .animate-view #results-container {
-  margin: 0 3em; }
+@media screen and (min-width: 768px) {
+  body #animate-view-container .animate-view #playlist, body #animate-view-container .animate-view #results-container {
+    margin: 0 3em; } }
 
 body {
   font-family: "Open Sans", sans-serif; }
@@ -74,6 +75,8 @@ body #page-header #credit {
   list-style-type: decimal; }
   #playlist #playlist-items .playlist-div, #playlist #past-search-items .playlist-div {
     margin-bottom: 1em; }
+    #playlist #playlist-items .playlist-div p, #playlist #past-search-items .playlist-div p {
+      max-width: 20em; }
 
 #playlist .btn-playlist-clear {
   margin: 2em 0; }
@@ -140,6 +143,8 @@ body #page-header #credit {
         border-radius: 0.5em; }
       .results .inner-result .tit-descrip-container .playlist-button-wrapper {
         margin: 1em; }
+    .results .inner-result p {
+      overflow-x: scroll; }
     .results .inner-result h3, .results .inner-result p {
       color: black; }
     .results .inner-result h3 {
@@ -148,7 +153,7 @@ body #page-header #credit {
     .results .inner-result img {
       float: none;
       cursor: pointer;
-      margin: 2em 0;
+      margin: 2em 0 7em 0;
       height: 100%;
       width: 50%; }
   .results .last > .inner-result {
@@ -166,7 +171,9 @@ body #page-header #credit {
   .results .inner-result .tit-descrip-container .playlist-button-wrapper, .results .inner-result .tit-descrip-container .outer-wrapper {
     text-align: left; }
   .results .inner-result .tit-descrip-container .result-chan-descrip {
-    display: inline-block; } }
+    display: inline-block; }
+  .results .inner-result img {
+    margin: 2em 0; } }
 
 @media screen and (min-width: 1024px) {
   #bar {
