--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -72,7 +72,7 @@
 		border-width: 1px 2px 0 2px;
 		// border-radius: 0.5em;
 		.tit-descrip-container {
-			z-index: 1;
+			z-index: 1;			
 			.playlist-button-wrapper, .outer-wrapper {
 				text-align: center;
 			}
@@ -88,6 +88,9 @@
 			.result-chan-descrip {
 			}
 		}
+		p {
+			overflow-x: scroll;
+		}
 		h3, p {
 			color: rgba(0, 0, 0, 1);
 		}
@@ -98,7 +101,7 @@
 		img {
 			float: none;
 			cursor: pointer;
-			margin:  2em 0;
+			margin:  2em 0 7em 0;
 			height: 100%;
 			width: 50%;
 		}
@@ -137,6 +140,9 @@
 				.result-chan-descrip {
 					display: inline-block;
 				}
+			}
+			img {
+				margin: 2em 0;
 			}
 		}
 	}
